--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -16,18 +16,20 @@
     <main class="container">
       <h1>Blog Articles</h1>
       <a href="/articles/new">New Article</a>
-      <% articles.forEach(element => { %>
+      <% articles.forEach(atricle => { %>
       <article class="card">
         <div class="card__body">
-          <h3><%= element.title %></h3>
-          <p><%= element.createdAt%></p>
+          <h3><%= atricle.title %></h3>
+          <p><%= atricle.createdAt%></p>
         </div>
         <div class="card__text">
-          <p><%= element.summary %></p>
+          <p><%= atricle.summary %></p>
         </div>
-        <a href="#">Read More</a>
-        <a href="#">Edit</a>
-        <a href="#">Delete</a>
+        <a href="articles/<%= atricle.slug %> ">Read More</a>
+        <a href="/articles/edit/<%= atricle.id %>">Edit</a>
+        <form action="/articles/<%= atricle.id %>?_method=DELETE" method="post">
+          <button type="submit">Delete</button>
+        </form>
       </article>
       <% }) %>
     </main>
